--- a/index.html
+++ b/index.html
@@ -10,23 +10,16 @@
 
 <body>
   <div id="app"></div>
-  <script>
-    window.global = window
-    let global = globalThis
-  </script>
-
+  <script>window.global = window;</script>
   <script type="module">
-    import process from 'process'
-    window.process = process
-  </script>
-
-  <script type="module">
-    import buffer from 'buffer'
-    window.Buffer = buffer.Buffer
-  </script>
-
-  <script type="module">
+    import process from "process";
+    import { Buffer } from "buffer";
+    import EventEmitter from "events";
     import util from 'util'
+
+    window.Buffer = Buffer;
+    window.process = process;
+    window.EventEmitter = EventEmitter;
     window.util = util
   </script>
 
