:bug: window.ipfs

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     window.process = process;
     window.EventEmitter = EventEmitter;
     window.util = util
+    window.ipfs = 0;
   </script>
 
   <script type="module" src="/src/main.ts"></script>
